Fixed z-index for price cards. Was overlapping navbar.

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ img {
   top: 0px;
   padding: 0 30px;
   transition: 0.5s;
+  z-index: 10;
 }
 
 .navbar.top {
